--- a/package.json
+++ b/package.json
@@ -11,10 +11,24 @@
     "elm:install": "elm-package install"
   },
   "devDependencies": {
+    "css-loader": "^0.28.4",
     "elm": "^0.18.0",
     "elm-webpack-loader": "^4.3.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.11.1",
+    "html-webpack-include-assets-plugin": "^0.0.5",
+    "html-webpack-plugin": "^2.28.0",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.5",
+    "style-loader": "^0.18.2",
+    "stylelint-config-standard": "^16.0.0",
+    "stylelint-webpack-plugin": "^0.7.0",
+    "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
+  },
+  "dependencies": {
+    "font-awesome": "^4.7.0",
+    "normalize.css": "^7.0.0"
   }
 }
